--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -29,6 +29,7 @@
   "editor.useTabStops": false,
   "explorer.confirmDelete": false,
   "explorer.confirmDragAndDrop": false,
+  "extensions.experimental.affinity": { "vscodevim.vim": 1 },
   "git.confirmSync": false,
   "git.enableSmartCommit": true,
   "git.openRepositoryInParentFolders": "never",
@@ -51,11 +52,8 @@
   "vim.highlightedyank.duration": 100,
   "vim.highlightedyank.enable": true,
   "vim.leader": " ",
-  "vim.useSystemClipboard": true,
-  "vsicons.dontShowNewVersionMessage": true,
-  "window.zoomLevel": 2,
-  "workbench.editor.empty.hint": "hidden",
-  "workbench.editor.enablePreview": false,
+  "vim.sneak": true,
+  "vim.sneakReplacesF": true,
   "workbench.editor.showTabs": "single",
   "workbench.iconTheme": "vscode-icons",
   "workbench.startupEditor": "none"
