--- a/vscode/vim-keybindings.jsonc
+++ b/vscode/vim-keybindings.jsonc
@@ -45,6 +45,16 @@
   },
   {
     "key": "ctrl+q",
+    "command": "workbench.action.closeAuxiliaryBar",
+    "when": "auxiliaryBarFocus"
+  },
+  {
+    "key": "ctrl+q",
+    "command": "workbench.action.closeSidebar",
+    "when": "sideBarFocus"
+  },
+  {
+    "key": "ctrl+q",
     "command": "workbench.action.closeGroup",
     "when": "activeEditorGroupEmpty && multipleEditorGroups"
   },
